:wrench: Fix content overflow when mobile nav is open.

--- a/markup/static/stylus/common.styl
+++ b/markup/static/stylus/common.styl
@@ -40,7 +40,7 @@ html.mob-menu-active
   vertical-align: top !important;
 }
 
-#c-slider-wrapper:before
+.header-fixed:before
   content: ''
   background: rgba(0,0,0,0);
   position: absolute
@@ -48,16 +48,15 @@ html.mob-menu-active
   display: none;
   left: 0
   right: 0
+  height: 100vh;
   top: 0
   bottom: 0
   z-index: 9
   animation: fadeOut 300ms 1 forwards;
 
-.mob-menu-active #c-slider-wrapper:before
+.mob-menu-active .header-fixed:before
   animation: fadeIn 300ms 1 forwards;
   display: block;
-
-
 
 @keyframes fadeOut
   from
